<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clientes ADT Uruguay</string>
    <string name="title_section1">Dates</string>
    <string name="title_section2"> </string>
    <string name="action_add">Añadir</string>
    <string name="action_profile">Detalles de usuario</string>
    <string name="title_activity_create_date">Create or Change a Date</string>
    <string name="action_save">Enviar</string>
    <string name="title_activity_create_profile">Detalles de usuario</string>
    <string name="action_edit">Editar</string>
    <string name="title_activity_profile">Detalles de usuario</string>
    <string name="fragment_create_date_title_hint">Title of your date</string>
    <string name="fragment_create_profile_name_hint">Nombre</string>
    <string name="fragment_create_profile_email_hint">correo electrónico</string>
    <string name="fragment_create_profile_account_num_hint">Número de cuenta</string>
    <string name="fragment_date_no_items">No hay elementos para mostrar.</string>
    <string name="fragment_profile_username">Nombre de usuario</string>
    <string name="fragment_profile_email_address">dirección de correo electrónico</string>
    <string name="fragment_main_header">Consulta nuestro Centro de ayuda, crea un ticket o administra tus entradas existentes</string>
    <string name="fragment_main_btn_knowledge_base">Centro De Ayuda</string>
    <string name="fragment_main_btn_contact_us">Contáctenos</string>
    <string name="fragment_main_btn_my_tickets">Bandeja de entrada</string>
    <string name="fragment_main_btn_rate_the_app">Rate the app</string>
    <string name="fragment_main_btn_my_profile">Mis Datos</string>
    <string name="fragment_main_btn_my_facturas">Mis Facturas</string>
    <string name="fragment_main_btn_chat">Chatea con nosotros</string>
    <string name="fragment_main_btn_my_app">Mis APPs ADT</string>
    <string name="fragment_profile_invalid_email">Introduzca una dirección de correo electrónico</string>
    <string name="fragment_forgot_pass">Olvidó su número de cliente</string>
    <string name="fragment_forgot_fact">Mis Facturas</string>
    <string name="dialog_auth_title">Configure Detalles de usuario</string>
    <string name="dialog_auth_positive_btn">Hazlo ahora</string>
    <string name="dialog_auth_negative_btn">Luego</string>

    <string name="push_error_contact_zendesk">Failed to contact push server</string>
    <string name="push_error_obtain_push_id">Failed to obtain push identifier</string>
    <string name="push_error_device_not_compatible">Your device doesn\'t support push notifications</string>

    <string name="push_notification_fallback_title">Someone replied to your ticket</string>

    <string name="push_date_title">Atención al cliente ADT</string>
    <string name="create_ticket_subject">Tema</string>
    <string name="create_ticket_desc">Descripción</string>
    <string name="create_ticket_type">Seleccionar</string>

    <string name="app_list_sucursal_virtual">SUCURSAL VIRTUAL</string>
    <string name="app_list_adt_find_u">ADT FINDU</string>
    <string name="app_list_adt_smart_security">ADT SMART</string>
    <string name="app_list_adt_smart_security_2">ADT SMART 2.0</string>
    <string name="app_list_adt_go">ADT GO</string>
    <string name="settings">Mi cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_subscribed">Channel subscribed</string>
    <string name="msg_subscribe_failed">Channel subscription failed</string>
    <string name="servicio_interactivo">Servicio interactivo</string>
    <string name="contratar_el_servicio">Contratar el servicio</string>
    <string name="acceso_app">Acceso APP</string>
    <string name="preguntas_frecuentes">Preguntas Frecuentes</string>
    <string name="interactive_security">Interactive Security</string>
    <string name="servicios_interactivos">Servicios interactivos</string>


</resources>
