<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/fragment_main_header"
            android:visibility="invisible" />

        <Button
            android:id="@+id/fragment_main_btn_knowledge_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/fragment_main_btn_knowledge_base"
            android:textColor="@color/article_attachment_list_divider_color" />

        <Button
            android:id="@+id/fragment_main_btn_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/fragment_main_btn_contact_us"
            android:textColor="@color/article_attachment_list_divider_color" />

        <Button
            android:id="@+id/fragment_main_btn_my_tickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/fragment_main_btn_my_tickets"
            android:textColor="@color/article_attachment_list_divider_color" />

        <Button
            android:id="@+id/fragment_main_btn_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_main_btn_chat"
            android:textColor="@color/article_attachment_list_divider_color" />

        <Button
            android:id="@+id/fragment_main_my_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/fragment_main_btn_my_app"
            android:textColor="@color/article_attachment_list_divider_color" />
        <Button
            android:id="@+id/fragment_main_btn_facturas"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/fragment_main_btn_my_facturas"
            android:textColor="@color/article_attachment_list_divider_color" />

        <Button
            android:id="@+id/fragment_main_btn_rate_the_app"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/fragment_main_btn_my_profile"
            android:textColor="@color/article_attachment_list_divider_color" />


    </LinearLayout>

</ScrollView>
