<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zendesk.adtapp.com.loct.adtapp.ui.CreateProfileActivity$PlaceholderFragment">


    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:minHeight="140dp"
            android:minWidth="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/adt_original_logo" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:elevation="0dp"
            android:text="Detalles de usuario"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:hint="@string/fragment_create_profile_name_hint"
            android:layout_below="@+id/button5"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/nameText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/fragment_create_profile_email_hint"
            android:ems="10"
            android:id="@+id/emailText"
            android:layout_below="@+id/nameText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint="@string/fragment_create_profile_account_num_hint"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/accountNumber"
            android:layout_below="@+id/emailText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:id="@+id/btm_lyr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/accountNumber">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="197dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:elevation="0dp"
                android:text="Olvidó su número de cliente?"
                android:textColor="@color/disabled_button_background"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button3"
                android:layout_centerHorizontal="true"
                android:elevation="0dp"
                android:text="Haga click aquí"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
        <android.support.design.button.MaterialButton
            android:id="@+id/profile_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/save_profile"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btm_lyr"
            android:layout_marginTop="15dp"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:textSize="14sp"
            android:paddingLeft="30dp" />

    </RelativeLayout>

</ScrollView>
